2 commit (прописано тестирование и логирование).